--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tauri-apps/api": "^1.6.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
+    "mapbox-gl": "^3.6.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
